@startuml

title __CENTRAL's Class Diagram__\n

  package central {
    enum AppachhiCentral {
      INSTANCE
      logger
      centralConf
      contextConfigs
      contextTestData
      pageDefs
      screenDateFormat
    }
  }
  

  package central {
    class Configuration {
        - options : Map<ConfigType, String>
        - Configuration()
        + Configuration()
        + Configuration()
        + Configuration()
        + getAsMap()
        + getValue()
        + getPlatform()
        + getAppFilePath()
        + getProperty()
    }
  }
  

  package central {
    class ObjectRepository {
        - rep : Map<String, PageDef>
        + ObjectRepository()
        + getPageDef()
    }
  }
  

  AppachhiCentral o-- Configuration : centralConf
  AppachhiCentral o-- ObjectRepository : pageDefs


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
